# sjs

./: CMakeLists.txt  FMM.c  JMMmeasurements.c  JMMversion3.c  README.org  bicubic.c  bicubic.h  cell_marching.c  collect_jmm4_data.sh  def.h  dial.c  dial.h  eik.c  eik.h  eik_F4.c  make_jmm4_plots.py  make_jmm4_tables.py  make_plots.py  make_tables.py  mat.c  mat.h  olim8mp0.c  requirements.txt  run.sh  slow.c  slow.h
